@@ -17,6 +17,7 @@
 
 #include "jsutils.h"
 #include "jsjit.h"
+#include "jsvariterator.h"
 
 // Write debug info to the console
 #define DEBUG_JIT jsjcDebugPrintf
@@ -73,6 +74,8 @@ typedef struct {
   JsjPhase phase;
   /// The ARM Thumb-2 code we're in the process of creating
   JsVar *code;
+  /// An iterator to increase write speed for code
+  JsvStringIterator codeIt;
   /// The ARM Thumb-2 variable init code block (this goes right at the start of our function)
   JsVar *initCode;
   /// How many blocks deep are we? blockCount=0 means we're writing to the 'code' var
