@@ -29,7 +29,8 @@
             JIT: Arrays can now be defined in JIT code (`[1,2,3]`/etc)
             JIT: Objects can now be defined in JIT code (`{a:2,b:3}`/etc)
             JIT: 'this' can be used in JIT code
-            JIT: Support for short-circuit operators (#2313) 
+            JIT: Support for short-circuit operators && and || (#2313) 
+            JIT: Increased compile speed ~5x using iterators for string append
 
      2v16 : JIT functions now execute in their own function scope (allows arguments)
             Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
